# fileformats-medimage

./: .codespell-ignorewords  .coveragerc  .gitignore  .pre-commit-config.yaml  README.rst  conftest.py  pyproject.toml
.github/workflows/: ci-cd.yml  tests.yml
extras/: README.rst  pyproject.toml
extras/fileformats/extras/medimage/: __init__.py  _version.py  base.py  converters.py  dicom.py  diffusion.py  nifti.py  raw.py
extras/fileformats/extras/medimage/tests/: test_deidentify.py  test_dicom_metadata.py  test_generators.py  test_neuro_converters.py
fileformats/medimage/: __init__.py  base.py  converters.py  dicom.py  diffusion.py  itk.py  misc.py  mrtrix.py  mrtrix3.py  neuro.py  nifti.py  pyproject.toml  raw.py  surface.py  utils.py
fileformats/medimage/classifiers/imaging/: modality.py
fileformats/medimage/contents/: __init__.py  derivatives.py
fileformats/medimage/contents/anatomical/: __init__.py
fileformats/medimage/contents/anatomical_entity/material_anatomical_entity/: __init__.py  anatomical_structure.py
fileformats/medimage/contents/imaging/: __init__.py  derivatives.py  modality.py
fileformats/medimage/contents/property/: __init__.py
fileformats/medimage/contents/property/imaging_procedure/: __init__.py
fileformats/medimage/contents/property/imaging_procedure/cross_sectional_procedure/: __init__.py
fileformats/medimage/contents/property/imaging_procedure/cross_sectional_procedure/mr_procedure/: __init__.py  tissue_contrast.py
fileformats/medimage/contents/tests/: test_contents.py
fileformats/medimage/converters/: neuro.py
fileformats/medimage/converters/tests/: test_types.py
fileformats/medimage/radlex/: __init__.py
fileformats/medimage/radlex/anatomical/: __init__.py
fileformats/medimage/radlex/imaging/: __init__.py  modality.py
fileformats/medimage/raw/: __init__.py
fileformats/medimage/raw/mri/: __init__.py
fileformats/medimage/raw/pet/: __init__.py  base.py  siemens.py
fileformats/medimage/tests/: test_contents.py  test_dicom.py  test_neuro_converters.py  test_nifti.py
scripts/: debug_ptd_read.py
