[build-system]
requires = ["flit_scm"]
build-backend = "flit_scm:buildapi"

[project]
name = "fileformats-medimage"
description = "Classes for representing different file formats in Python classes for use in type hinting in data workflows"
readme = "README.rst"
requires-python = ">=3.8"
dependencies = [
    "jq>=1.2.2",
    "numpy>=1.22.3",
    "fileformats-core >=0.1",
    "fileformats-common >=0.1.1",
    "nibabel >=4.0.2",
    "pydicom >=2.3.0",
    "pydra-dcm2niix >=1.2.0",
    "pydra-mrtrix3 >=0.2",
]
license = {file = "LICENSE"}
authors = [{name = "Thomas G. Close", email = "tom.g.close@gmail.com"}]
maintainers = [{name = "Thomas G. Close", email = "tom.g.close@gmail.com"}]
keywords = [
    "file formats",
    "data",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "black",
    "pre-commit",
    "codespell",
    "flake8",
    "flake8-pyproject",
]
test = [
    "pytest >=6.2.5",
    "pytest-env>=0.6.2",
    "pytest-cov>=2.12.1",
    "codecov",
    "medimages4tests >=0.3",
    "arcana-core >=0.8.2",
]

converters = [
    "pydra >= 0.20.0"
]

[project.urls]
repository = "https://github.com/ArcanaFramework/fileformats-medimage"


[tool.flit.module]
name = "fileformats.medimage"

[tool.flit.sdist]
exclude = [".gitignore"]

[tool.setuptools_scm]
write_to = "fileformats/medimage/_version.py"

[tool.black]
target-version = ['py38']
exclude = "fileformats/medimage/_version.py"

[tool.codespell]
ignore-words = ".codespell-ignorewords"

[tool.flake8]
doctests = true
per-file-ignores = [
    "__init__.py:F401"
]
max-line-length = 88
select = "C,E,F,W,B,B950"
extend-ignore = ['E203', 'E501', 'E129']
